# david_ws

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.3.2-pre1  README.md  hri.csv
apriltags/: CTestTestfile.cmake  Makefile  apriltags.cbp  cmake_install.cmake
apriltags/catkin_generated/: pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
apriltags/catkin_generated/installspace/: apriltags.pc  apriltagsConfig.cmake
catkin_generated/: generate_cached_setup.py  order_packages.cmake  order_packages.py  setup_cached.sh
catkin_generated/installspace/: .rosinstall  _setup_util.py  setup.sh
devel/: .catkin  .rosinstall  setup.sh
devel/lib/pkgconfig/: apriltags.pc  pocketsphinx.pc  tb_self_experimentation.pc  tb_simulation.pc
gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake  gtest.cbp
tb_approach/: CMakeLists.txt  package.xml
tb_approach/launch/include/: approach.launch  apriltag_filter.launch  jsonserver.launch  robot_feedback.launch  rviz_basestation.launch  self_experiementation_architecture.launch  tb_initialization.launch  voice_recognition.launch
tb_approach/launch/mapping/: mapping_basestation.launch  (+1 more)
tb_approach/msg/: data_stats.msg
tb_approach/self_experimentation/: effector.py  experiment_coordinator.py  feedback.py  learn_hri.py  version_manager.py
tb_approach/self_experimentation_nodes/: constants.py  experiment_coordinator.py  feedback.py  jsonserver.py  learn_hri.py  metric_analysis.py  stop_experiment.py  version_manager.py
tb_approach/src/: approach_and_go.cpp  apriltag_detection.cpp  apriltag_filter.cpp  apriltag_rviz_markers.cpp  apriltag_tf_broadcaster.cpp  awaypoint_rviz_markers.cpp  goal_rviz_markers.cpp  robot_feedback.cpp  tb_tf_listener.cpp
tb_approach/srv/: robot_feedback_service.srv
tb_self_experimentation/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml  tb_self_experimentation.cbp
tb_self_experimentation/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  tb_self_experimentation-msg-extras.cmake.installspace.in
tb_self_experimentation/catkin_generated/installspace/: tb_self_experimentation-msg-paths.cmake  tb_self_experimentation.pc  tb_self_experimentationConfig.cmake
tb_self_experimentation/cmake/: tb_self_experimentation-genmsg-context.py  tb_self_experimentation-genmsg.cmake
tb_self_experimentation/launch/: base.launch  everything.launch  mapping.launch  mapping_basestation.launch  mapping_tb.launch  selfexperimentation_basestation.launch  turtle.launch
tb_self_experimentation/launch/approach_tag/: README.txt  approachtags_basestation.launch  approachtags_tb.launch
tb_self_experimentation/launch/glue/: glue_basestation.launch  glue_tb.launch
tb_self_experimentation/launch/include/: approach.launch  apriltag_filter.launch  robot_feedback.launch  rviz_basestation.launch  self_experiementation_architecture.launch  tb_initialization.launch  test_voice_recognition.launch  voice_recognition.launch
tb_self_experimentation/launch/mapping/: README.txt
tb_self_experimentation/launch/slam/: README.txt  slam_tb.launch
tb_self_experimentation/launch/slam_apriltags/: README.txt  slamapriltags_basestation.launch  slamapriltags_tb.launch
tb_self_experimentation/launch/tests/approach_tag/: approachtags_tb.launch
tb_self_experimentation/launch/tests/glue/: README.txt  glue_basestation.launch  glue_tb.launch
tb_self_experimentation/launch/tests/slam_apriltags/: slamapriltags_basestation.launch  slamapriltags_tb.launch
tb_self_experimentation/misc/hri/: 3001.dic  3001.log_pronounce  3001.sent  3001.vocab
tb_self_experimentation/misc/maps/: jupiter_room457.yaml
tb_self_experimentation/misc/rviz/: self_experimentation.rviz
tb_self_experimentation/misc/voice_commands/: 3001.lm  5419.dic  5419.log_pronounce  hri_corpus.txt
tb_self_experimentation/misc/voice_commands/3words/: 5419.sent  5419.vocab
tb_self_experimentation/pynodes/: effector.py  experiment_coordinator.py  feedback.py  learn_hri.py  metric_analysis.py  stop_experiment.py  version_manager.py  voice_feedback.py
tb_self_experimentation/src/: approach_and_go.cpp  approach_and_go.cpp.bak  approach_human.cpp  apriltag_detection.cpp  apriltag_filter.cpp  apriltag_rviz_markers.cpp  apriltag_tf_broadcaster.cpp  apriltag_tf_listener (copy).cpp  apriltag_tf_listener.cpp  awaypoint_rviz_markers.cpp  goal_rviz_markers.cpp  robot_feedback.cpp  tag_filter.cpp
tb_self_experimentation/srv/: analyze_feedback.srv  learn_service.srv  random_version.srv  set_distance.srv
tb_simulation/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  tb_simulation.cbp
tb_simulation/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
tb_simulation/launch/: gazebo_mapping_demo.launch  gazebo_slam_demo.launch  gazebo_slam_demo_robot_view.launch  gazebo_slam_demo_tf.launch
(+15 files in other folders)
